# SaFona

./: .gitignore  CLAUDE.md  README.md  build.sh  game_design_document_draft.md  pyproject.toml  run.sh  safona.spec  setup_display.sh  team.md
dist_assets/: README.txt.template  itchio_page_description.html  itchio_page_description.md
docs/: distribution.md  game_design_document.md  implementation_roadmap.md  software_architecture.md  w1_asset_generation_guide.md
sa_fona/: __init__.py  main.py
tests/: conftest.py  test_asset_loader_paths.py  test_asset_processing.py  test_attack_effect_overlay.py  test_boss_entity.py  test_camera.py  test_clean_sprites.py  test_combat.py  test_companion.py  test_cutscene.py  test_d10e_w2_stub.py  test_dialogue.py  test_economy.py  test_effects.py  test_enemy_behaviors.py  test_enemy_factory.py  test_enemy_wall_facing.py  test_entity.py  test_env_sprite_rendering.py  test_env_sprites_manifest.py  test_event_bus.py  test_gameplay_polish.py  test_gameplay_scene.py  test_guardian_npc_story.py  test_hud.py  test_input_handler.py  test_intro_cutscene.py  test_level_loader.py  test_level_select.py  test_map_compiler.py  test_map_to_json.py  test_mask_system.py  test_movement_physics.py  test_overlapping_animations.py  test_physics.py  test_pickup.py  test_pit_fall_death.py  test_pixel_scaler.py  test_player.py  test_process_ai_sprites.py  (+11 more)
tools/: clean_shadow.py  clean_sprites.py  composite_sling_movement.py  generate_ai_sources.py  generate_sprites.py  generate_tileset.py  json_to_map.py  map_to_json.py  process_ai_sprites.py  (+11 more)
(+239 files in other folders)
