[project]
name = "sa-fona"
version = "0.1.0"
description = "2D retro side-scrolling platformer set across the Balearic Islands"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
